--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf dist && tsc"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,11 @@
   "homepage": "https://github.com/fernando-stteffen/boilerAdvanced#readme",
   "devDependencies": {
     "typescript": "^4.9.5"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "dependencies": {
+    "rimraf": "^4.1.2"
   }
 }
