--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/main/api",
     "build": "rimraf dist && tsc"
   },
   "repository": {
@@ -18,12 +19,15 @@
   },
   "homepage": "https://github.com/fernando-stteffen/boilerAdvanced#readme",
   "devDependencies": {
+    "@types/module-alias": "^2.0.1",
+    "@types/node": "^18.14.0",
     "typescript": "^4.9.5"
   },
   "engines": {
     "node": "18.x"
   },
   "dependencies": {
+    "module-alias": "^2.2.2",
     "rimraf": "^4.1.2"
   }
 }
