--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "paths": {
       "@/*": ["*"],
       "@/tests/*": ["../tests/*"],
-    }                    /* Skip type checking all .d.ts files. */
+    },
+    "strict": true,                    /* Skip type checking all .d.ts files. */
   },
   "include": ["src"]
 }
