--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     },
     "strict": true,                    /* Skip type checking all .d.ts files. */
   },
-  "include": ["src"]
+  "include": ["src", "tests"]
 }
