--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.4.3",
+    "lint-staged": "^13.1.2",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
